# FastAPI-Postgres

./: pyproject.toml
src/fastapi_postgres/: __init__.py  main.py
src/fastapi_postgres/api/: deps.py  main.py
src/fastapi_postgres/api/routers/: image.py  math.py  registration.py  user.py
src/fastapi_postgres/core/: cache.py
src/fastapi_postgres/crud/: user.py
src/fastapi_postgres/database/: database.py
src/fastapi_postgres/database/models/: user.py
src/fastapi_postgres/exceptions/: handler.py  math.py
src/fastapi_postgres/router/: user.py
src/fastapi_postgres/schemas/: math.py  registration.py  user.py
src/fastapi_postgres/services/: math.py  user.py  utils.py
