[project]
name = "fastapi-postgres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Choongmin Kim", email = "choongminkim0123@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.119.0",
    "greenlet>=3.2.4",
    "psycopg2-binary>=2.9.11",
    "redis[hiredis]>=7.0.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]

[project.scripts]
fastapi-postgres = "fastapi_postgres:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
